--- a/style.css
+++ b/style.css
@@ -15,17 +15,54 @@ body{
 .Jbetween{
   justify-content: space-between;
 }
-li {
-  justify-content: space-between;
-  padding-left:10px;
+#Objective {
+  width:100%;
+  border-radius:6px;
+  padding: 10px 5px;
+}
+#Deadlineminute {
+  border-radius:6px;
+  padding: 10px 5px;
+}
+#Deadlinehour {
+  border-radius:6px;
+  padding: 10px 5px;
+}
+#Deadlineday {
+  border-radius:6px;
+  padding: 10px 5px;
+}
+#Deadlinemonth {
+  border-radius:6px;
+  padding: 10px 5px;
+}
+#Deadlineyear {
+  border-radius:6px;
+  padding: 10px 5px;
+}
+.Sizebutton {
   font-size:25px;
-  background-color:lime;
-  color:black;
+  width:30%;
+  margin-top:-5px;
+  margin-bottom:-5px;
+}
+#picksort {
+  font-size:20px;
+}
+li {
+  padding: 5px 0px 5px 10px;
+  margin:2px;
+  width:75%;
+  font-size:25px;
+  background-color:lightgreen;
   border-style:solid;
-  border-block-width:1px;
-  border-left-width:0.2px;
-  border-right-width:0.2px;
+  border-width:1px;
+  border-radius:10px;
   list-style-type:none;
+}
+.Rad {
+  border-top-right-radius:10px;
+  border-bottom-right-radius:10px;
 }
 button{
   font-size:25px;
@@ -44,10 +81,31 @@ button{
   background-color: blue;
   color:white;
 }
+#container {
+  display:grid;
+  grid-template-areas: 
+    "left middle right"
+    "left middle right"
+    "left middle right";
+  grid-gap:5px;
+  grid-template-columns:0.5fr auto 0.5fr;
+  grid-template-rows:auto auto auto;
+}
+#left {
+  grid-area:left;
+}
+#middle {
+  grid-area:middle;
+  background-color:lightgray;
+}
+#right {
+  grid-area:right;
+}
 .Flexcol{
   display:flex;
   flex-direction:column;
-  gap:10px;
+  align-items:center;
+  gap:5px;
 }
 .bg-black {
   background-color:black;
